--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "line-reader": "~0.2.4",
+    "carrier": "~0.1.14",
+    "pretty-print": "~0.4.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
